--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="icon" href="fav/favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      href="fav/apple-touch-icon.png"
+      type="image/png"
+    />
+    <link rel="icon" href="fav/android-chrome-512x512.png" type="image/png" />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="fav/android-chrome-192x192.png"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      sizes="32x32"
+      href="fav/favicon-32x32.png"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      sizes="16x16"
+      href="fav/favicon-16x16.png"
+      type="image/png"
+    />
   </head>
   <body>
     <header class="header">
