--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <input
             type="hidden"
             name="_next"
-            value="http://127.0.0.1:5500/obrigado.html"
+            value="https://reinaldojunior3108.github.io/ReinaldoJunior.github.io/obrigado.html"
           />
         </div>
       </form>
