--- a/index.html
+++ b/index.html
@@ -180,10 +180,29 @@
             target="_blank"
             ><img src="download.png" alt="screenshot" width="500px"
           /></a>
+          <a
+            href="https://github.com/reinaldojunior3108/NLW-Unite"
+            target="_blank"
+            ><video src="unite.mov" autoplay loop muted></video
+          ></a>
         </div>
+
         <div class="nlw">
           <h2 class="heading">NLW UNITE</h2>
-          <p>Projeto criado na semana NLW-Unite</p>
+          <p>
+            A idéia desse projeto é criar uma aplicação web multiplataforma com
+            o objetivo de organização de lista de inscrição e Check-in, sendo
+            <br />
+            - Front - com <b>HTML, CSS e JS</b> e <b>React</b><br />
+            - Mobile - com <b>React Native</b> <br />
+            - Back - <b>NodeJS</b> <br />
+          </p>
+          <p>
+            Ate o momento criei apenas o FrontEnd HTML e React. <br />
+            Dia 1 - foram feitas todas instalações e preparação do ambiente de
+            desenvolvimento.br <br />
+            Dia 2 - foi criado a landing page inicial e dashboard do organizador
+          </p>
         </div>
       </div>
     </section>
