--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <a
             href="https://github.com/reinaldojunior3108/NLW-Unite"
             target="_blank"
-            ><video src="unite.mov" autoplay loop muted></video
+            ><video src="unite.mov" autoplay loop muted playsinline></video
           ></a>
         </div>
 
