--- a/index.html
+++ b/index.html
@@ -180,11 +180,8 @@
             target="_blank"
             ><img src="download.png" alt="screenshot" width="500px"
           /></a>
-          <a
-            href="https://github.com/reinaldojunior3108/NLW-Unite"
-            target="_blank"
-            ><video src="unite.mov" autoplay loop muted playsinline></video
-          ></a>
+          <video src="unite.mov" autoplay loop muted playsinline></video
+          >
         </div>
 
         <div class="nlw">
@@ -203,6 +200,15 @@
             desenvolvimento.br <br />
             Dia 2 - foi criado a landing page inicial e dashboard do organizador
           </p>
+          <div class="githublink">
+            <p>
+              <p>Link do Projeto React:</p>
+              <a href="https://github.com/ReinaldoJunior3108/" target="_blank"
+                ><i class="bx bxl-github"></i>
+                </a>
+              
+            </p>
+          </div>
         </div>
       </div>
     </section>
