--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <a href="#inicio" class="active">Inicio</a>
         <a href="#servicos">Serviços</a>
         <a href="#education">Educação</a>
+        <a href="#projetos">Projetos</a>
         <a href="#contato">Contato</a>
       </nav>
     </header>
@@ -171,7 +172,7 @@
     </section>
     <!-- Projetos -->
 
-    <section class="projetos">
+    <section class="projetos" id="projetos">
       <h2 class="heading">Meus Projetos</h2>
       <div class="project-container">
         <div class="project">
@@ -290,10 +291,10 @@
         ></a>
       </div>
       <ul class="list">
-        <li><a href="#">FAQ</a></li>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#servicos">Serviços</a></li>
         <li><a href="#education">Educação</a></li>
+        <li><a href="#projetos">Projetos</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </footer>
