--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://reinaldojunior3108.github.io/ReinaldoJunior.github.io/obrigado.html"
+            value="https://reinaldojunior3108.github.io/MeuPortfolio/obrigado.html"
           />
         </div>
       </form>
