--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
             target="_blank"
             ><img src="download.png" alt="screenshot" width="500px"
           /></a>
-          <video src="unite.mov" autoplay loop muted playsinline></video
-          >
+          <video src="unite.mov" autoplay loop muted playsinline></video>
         </div>
 
         <div class="nlw">
@@ -202,13 +201,60 @@
             Dia 2 - foi criado a landing page inicial e dashboard do organizador
           </p>
           <div class="githublink">
-            <p>
-              <p>Link do Projeto React:</p>
-              <a href="https://github.com/ReinaldoJunior3108/NLW-Unite" target="_blank"
-                ><i class="bx bxl-github"></i>
-                </a>
-              
-            </p>
+            <p></p>
+            <p>Link do Projeto React:</p>
+            <a
+              href="https://github.com/ReinaldoJunior3108/NLW-Unite"
+              target="_blank"
+              ><i class="bx bxl-github"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="project">
+          <a
+            href="https://programacao-internet.vercel.app/Trabalho%201%C2%BA%20Bimestre/index.html"
+            target="_blank"
+            ><img src="Formula1.png" alt="screenshot" width="500px"
+          /></a>
+        </div>
+
+        <div class="nlw">
+          <h2 class="heading">CLASSIFICAÇÃO F1</h2>
+          <p>
+            Projeto de um trabalho academico para a disciplina de
+            <b>Programação para internet</b> utilizando: <br />
+            <br />
+            - Front - com <b>HTML, CSS e JS</b>
+          </p>
+          <p>
+            - Foi criado tabelas de classificação de etapas para Pilotos e
+            Construtores. <br />
+            - Grid com foto de cada corredor, com sua posicão, pontos e
+            Equipe<br />
+            - Grid com as equipes, com sua posição, pontos, pilotos e foto dos
+            carros<br />
+            - Cada grid possui uma animação de transição de bordas<br />
+            - Ao final da Pagina se encontra uma tabela de pontuação
+            utilizada<br />
+          </p>
+          <div class="githublink">
+            <p>Link do Deploy e Projeto:</p>
+            <a
+              href="https://github.com/ReinaldoJunior3108/programacao-internet/tree/main/Trabalho%201%C2%BA%20Bimestre"
+              target="_blank"
+              ><i class="bx bxl-github"></i>
+            </a>
+            <a
+              class="vercel"
+              href="https://programacao-internet.vercel.app/Trabalho%201%C2%BA%20Bimestre/index.html"
+              target="_blank"
+            >
+              <svg aria-label="Vercel Logo" viewBox="0 0 75 65" height="40">
+                <path d="M37.59.25l36.95 64H.64l36.95-64z"></path>
+              </svg>
+            </a>
           </div>
         </div>
       </div>
@@ -303,19 +349,19 @@
     <script type="text/javascript">
       function formatarTelefone(input) {
         // Remove qualquer caractere que não seja número
-        let valor = input.value.replace(/\D/g, "");
+        let valor = input.value.replace(/\D/g, "")
 
         // Formata o número de telefone conforme a máscara (XX) XXXXX-XXXX
         if (valor.length <= 10) {
           // Formato para 10 dígitos (DDD + número)
-          valor = valor.replace(/^(\d{2})(\d{5})(\d{4})$/, "($1) $2-$3");
+          valor = valor.replace(/^(\d{2})(\d{5})(\d{4})$/, "($1) $2-$3")
         } else {
           // Formato para 11 dígitos (DDD + número com 9 dígitos)
-          valor = valor.replace(/^(\d{2})(\d{5})(\d{4})$/, "($1) $2-$3");
+          valor = valor.replace(/^(\d{2})(\d{5})(\d{4})$/, "($1) $2-$3")
         }
 
         // Atualiza o valor do input com o número formatado
-        input.value = valor;
+        input.value = valor
       }
     </script>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
@@ -325,7 +371,7 @@
         speed: 100,
         transition: true,
         easing: "cubic-bezier(.03,.98,.52,.99)",
-      });
+      })
     </script>
   </body>
 </html>
